--- a/src/components/ScrollContainer/Projects/Projects.css
+++ b/src/components/ScrollContainer/Projects/Projects.css
@@ -43,7 +43,7 @@
 /* tags */
 .demo-tag {
     background-color: var(--action);
-    color: var(--text);
+    color:  rgba(16, 16, 16, 1);
     padding: 5px 10px 5px 10px;
     margin: 10px 0 10px 0;
     border-radius: 20px;
@@ -85,7 +85,7 @@
     padding: 15px;
     font-size: 1rem;
     font-weight: bold;
-    color: var(--text);
+    color:  rgba(16, 16, 16, 1);
 }   
 
 .link-buttons-container button div {
