--- a/src/components/ScrollContainer/Resume/Resume.css
+++ b/src/components/ScrollContainer/Resume/Resume.css
@@ -16,7 +16,7 @@
     padding: 0 15px 0 15px;
     font-size: 1rem;
     font-weight: bold;
-    color: var(--text);
+    color:  rgba(16, 16, 16, 1);
     margin: 15px 0 10px 15px;
 }
 
@@ -30,7 +30,7 @@
 
 .download-button a {
     text-decoration: none;
-    color: var(--text);
+    color: rgba(16, 16, 16, 1);
 }
 
 .view-button {
